2003-01-29  Jörgen Scheibengruber <mfcn@gmx.de>

	* gnomeradio.desktop.in: Added startup-notification
	and bugzilla tags

2003-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.
	
2003-01-24  Daniel Yacob <locales@geez.org>

	* configure.in: Added am to ALL_LINGUAS.

2003-01-08  Jörgen Scheibengruber <mfcn@gmx.de>

	* Made the hole thing ready for cvs

2003-01-07  Jörgen Scheibengruber <mfcn@gmx.de>

	* Hopefully fixed an issue with stereo on aztech 
	radio cards.
	(Thx to Giuseppe Bagnato <ttyman@sitoverde.com>)

2002-12-18  Jörgen Scheibengruber <mfcn@gmx.de>

	* Removed _all_ deprecated stuff... Fixed some issues
	with detection of invalid/existing files before 
	recording...
	* Applied patches from Artur Flinta <aflinta@at.kernel.pl>

2002-12-16  Jörgen Scheibengruber <mfcn@gmx.de>
	
	* Added a minimal (auto)configuration if ~/.lircrc is
	not present.

2002-12-14  Jörgen Scheibengruber <mfcn@gmx.de>
	
	* Removed some debugging output and some deprecated
	stuff...

2002-11-06  Jörgen Scheibengruber <mfcn@gmx.de>

	* Played around a little bit with the new 
	press-and-hold of the step buttons (build in
	a little delay)

2002-11-03  Jörgen Scheibengruber <mfcn@gmx.de>
	
	* Partially rewrote recording part. New files:
	rec_tech.c & rec_tech.h

2002-11-01  Jörgen Scheibengruber <mfcn@gmx.de>

	* Added press-and-hold for the step buttons.
	* Reverted behaviour of the frequency slider
	from delayed to instant apply
	* No longer store volume in gconf. Get the
	current volume and set the slider appropriate
	instead.

2002-10-20  Jörgen Scheibengruber <mfcn@gmx.de>

	* Added keyboard shortcuts. 
	* Several minor	improvements regarding the redrawing of
	the status window.

2002-10-19  Jörgen Scheibengruber <mfcn@gmx.de>

	* Started with documentation: added docs...
	* Added help buttons to the dialogs, and a f1-key-press
	callback

2002-10-13  Jörgen Scheibengruber <mfcn@gmx.de>

	*Added example.lircrc and the entry in Makefile.am
