@@ -1,3 +1,7 @@
+2003-02-02  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* hu.po: Committed translation by Sári Gábor <saga@uhulinux.hu>
+
 2003-01-30  Fatih Demir <kabalak@gtranslator.org>
 
 	* tr.po: Committed updated Turkish translation by Barbaros.
