@@ -1,3 +1,12 @@
+2003-02-02  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* configure.in: added "hu" to ALL_LINGUAS
+
+2003-01-31  Jörgen Scheibengruber <mfcn@gmx.de>
+
+	* gui.c: rearranged some startup code, so that
+	the lirc error message doesn't delay radio playback
+
 2003-01-29  Jörgen Scheibengruber <mfcn@gmx.de>
 
 	* gnomeradio.desktop.in: Added startup-notification
